Ensure correct shadow visibility

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   position: sticky;
   top: -30px;
-  z-index: 1000;
+  z-index: 5;
 }
 
 .header__shadow {
@@ -12,7 +12,14 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1001;
+  z-index: 3;
+}
+
+.header__placeholder {
+  background-color: #fff;
+  height: 30px;
+  position: relative;
+  z-index: 4;
 }
 
 .header__row {
@@ -50,9 +57,4 @@
     left: 0;
     right: auto;
   }
-}
-
-.header__placeholder {
-  background-color: #fff;
-  height: 30px;
 }
